# weather-scrapper

./: Cargo.toml  README.md
src/: db.rs  lib.rs  main.rs  windguru.rs
